style.css: now preventing accidental page reload on mobile (preventing the "pull from top to reload" feature)

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ html
 {
 	padding: 0;
 	margin: 0;
+	overscroll-behavior: none;
 }
 
 body
